--- a/TavernaMobile/res/layout/sliding_row.xml
+++ b/TavernaMobile/res/layout/sliding_row.xml
@@ -4,18 +4,13 @@
     android:layout_height="50dp"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/row_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:padding="10dp"
-        android:src="@drawable/ic_launcher" />
-
     <TextView
         android:id="@+id/row_title"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:drawableLeft="@drawable/taverna_wheel_logo_small"
+        android:drawablePadding="10dp"
         android:gravity="center_vertical"
         android:padding="10dp"
         android:text="Medium Text"
