--- a/TavernaMobile/res/layout/main_panel.xml
+++ b/TavernaMobile/res/layout/main_panel.xml
@@ -5,6 +5,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:gravity="center" >
 
     <android.support.v4.view.ViewPager
@@ -63,7 +65,6 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/white"
             android:textStyle="bold|italic" />
-
     </LinearLayout>
 
 </FrameLayout>
