--- a/TavernaMobile/res/layout/main_explore.xml
+++ b/TavernaMobile/res/layout/main_explore.xml
@@ -98,7 +98,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:padding="20dp"
-        android:src="@drawable/ic_action_search"
+        android:src="@drawable/search"
         android:text="Button" />
 
 </RelativeLayout>
