--- a/TavernaMobile/res/layout/main_workflows_single_row.xml
+++ b/TavernaMobile/res/layout/main_workflows_single_row.xml
@@ -25,8 +25,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:layout_weight="3"
+        android:layout_margin="5dp"
+        android:layout_weight="3.5"
         android:orientation="vertical" >
 
         <TextView
@@ -111,9 +111,10 @@
 
     <ImageView
         android:id="@+id/savedWorkflowNavArrow"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="0.5"
         android:src="@drawable/navigation_next" />
 
 </LinearLayout>
