--- a/TavernaMobile/res/values/color.xml
+++ b/TavernaMobile/res/values/color.xml
@@ -141,5 +141,6 @@
     <color name="DarkBlue">#00008B</color>
     <color name="Navy">#000080</color>
     <color name="Black">#000000</color>
+    <color name="transperent">#00000000</color>
 
 </resources>
