--- a/TavernaMobile/res/layout/inputs.xml
+++ b/TavernaMobile/res/layout/inputs.xml
@@ -47,6 +47,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:text="Back" />
     </LinearLayout>
 </LinearLayout>
