--- a/TavernaMobile/res/layout/main_runs.xml
+++ b/TavernaMobile/res/layout/main_runs.xml
@@ -6,26 +6,11 @@
 
     <com.handmark.pulltorefresh.library.PullToRefreshExpandableListView
         android:id="@+id/pull_to_refresh_listview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:focusable="false"
         android:focusableInTouchMode="false" />
-
-    <!--
-    <yaochangwei.pulltorefreshlistview.widget.extend.PullToRefreshListView
-        android:id="@+id/refreshableList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="top"
-        android:layout_margin="10dp"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10dp" />
-
-    <ExpandableListView
-        android:id="@+id/expandable_runs_lists"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ExpandableListView>
-    -->
 
 </RelativeLayout>
