--- a/TavernaMobile/res/drawable/dialog_body.xml
+++ b/TavernaMobile/res/drawable/dialog_body.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<inset xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <gradient
-        android:angle="270"
-        android:endColor="#80848484"
-        android:startColor="#80FFFFFF" />
+    <shape android:shape="rectangle" >
+        <solid android:color="#A0FFFFFF" />
+        
+        <corners
+            android:topLeftRadius="20dp"
+            android:topRightRadius="20dp"
+            android:bottomLeftRadius="20dp"
+            android:bottomRightRadius="20dp" />
+    </shape>
 
-</shape>
+</inset>
