--- a/TavernaMobile/res/drawable/dialog_footer.xml
+++ b/TavernaMobile/res/drawable/dialog_footer.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<inset xmlns:android="http://schemas.android.com/apk/res/android"
+    android:insetBottom="100dp" >
 
-    <solid android:color="#848484" />
+    <shape android:shape="rectangle" >
+        <solid android:color="#A0FFFFFF" />
 
-    <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp" />
+        <corners
+            android:bottomLeftRadius="20dp"
+            android:bottomRightRadius="20dp" />
 
-    <stroke
-        android:width="1dp"
-        android:color="#7F7F7F" />
+        <!-- <stroke
+            android:width="1dp"
+            android:color="#7F7F7F" /> -->
+    </shape>
 
-    <padding
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp" />
-
-</shape>
+</inset>
