--- a/TavernaMobile/res/drawable/dialog_title.xml
+++ b/TavernaMobile/res/drawable/dialog_title.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetBottom="-1dp" >
+    android:insetTop="-1dp" >
 
     <shape android:shape="rectangle" >
         <solid android:color="#80FFFFFF" />
@@ -9,9 +9,11 @@
             android:topLeftRadius="20dp"
             android:topRightRadius="20dp" />
 
-        <!-- <stroke
+        <!--
+             <stroke
             android:width="1dp"
-            android:color="#7F7F7F" /> -->
+            android:color="#7F7F7F" />
+        -->
     </shape>
 
 </inset>
