--- a/TavernaMobile/res/drawable/dialog_bottom_selector.xml
+++ b/TavernaMobile/res/drawable/dialog_bottom_selector.xml
@@ -3,5 +3,6 @@
 
     <item android:drawable="@drawable/block" android:state_pressed="false" android:state_selected="false"/>
     <item android:drawable="@drawable/block_pressed" android:state_pressed="true"/>
+    <item android:drawable="@drawable/block_selected" android:state_selected="true"/>
 
 </selector>
