--- a/TavernaMobile/res/layout/dialog_layout_neutral.xml
+++ b/TavernaMobile/res/layout/dialog_layout_neutral.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center" >
 
@@ -10,18 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/Black" />
+        android:textColor="@color/Black"
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/neutraldialog_dismiss_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/neutraldialog_message"
+        android:layout_below="@+id/neutraldialog_message"
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:background="@drawable/dialog_bottom_selector"
@@ -29,6 +29,7 @@
         android:minHeight="45dp"
         android:paddingLeft="35dp"
         android:paddingRight="35dp"
-        android:text="@string/netrual_dialog_button_text" />
+        android:text="@string/netrual_dialog_button_text"
+        android:textSize="15sp" />
 
 </RelativeLayout>
