connection not stable... mapping credit(user/group)

--- a/TavernaMobile/res/layout/dialog_layout_neutral.xml
+++ b/TavernaMobile/res/layout/dialog_layout_neutral.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:gravity="center" >
+    android:gravity="center"
+    android:minWidth="200dip"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/neutraldialog_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_weight="3"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Black"
@@ -20,10 +22,9 @@
     <Button
         android:id="@+id/neutraldialog_dismiss_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/neutraldialog_message"
-        android:layout_centerHorizontal="true"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
+        android:layout_weight="1"
         android:background="@drawable/dialog_bottom_selector"
         android:gravity="center"
         android:minHeight="45dp"
@@ -32,4 +33,4 @@
         android:text="@string/netrual_dialog_button_text"
         android:textSize="15sp" />
 
-</RelativeLayout>
+</LinearLayout>
