--- a/TavernaMobile/res/layout/workflowsexpo_single_row.xml
+++ b/TavernaMobile/res/layout/workflowsexpo_single_row.xml
@@ -113,6 +113,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/wfExpoSingleRowCreditLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
